# src/docs/swagger.json
@@ -220,7 +220,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/round/import/{roundId}/commons": {
             "post": {
                 "description": "The user would provide a round ID and a list of commons categories and the system would import images from those categories",
                 "produces": [
@@ -561,10 +563,40 @@
                 "startDate": {
                     "type": "string"
                 },
+                "status": {
+                    "$ref": "#/definitions/database.RoundStatus"
+                },
                 "totalSubmissions": {
                     "type": "integer"
                 }
             }
+        },
+        "database.RoundStatus": {
+            "type": "string",
+            "enum": [
+                "PENDING",
+                "IMPORTING",
+                "DISTRIBUTING",
+                "EVALUATING",
+                "REJECTED",
+                "CANCELLED",
+                "PAUSED",
+                "SCHEDULED",
+                "ACTIVE",
+                "COMPLETED"
+            ],
+            "x-enum-varnames": [
+                "RoundStatusPending",
+                "RoundStatusImporting",
+                "RoundStatusDistributing",
+                "RoundStatusEvaluating",
+                "RoundStatusRejected",
+                "RoundStatusCancelled",
+                "RoundStatusPaused",
+                "RoundStatusScheduled",
+                "RoundStatusActive",
+                "RoundStatusCompleted"
+            ]
         },
         "routes.ResponseList-database_Campaign": {
             "type": "object",
@@ -803,7 +835,7 @@
                     }
                 },
                 "status": {
-                    "$ref": "#/definitions/services.RoundStatus"
+                    "$ref": "#/definitions/database.RoundStatus"
                 },
                 "successCount": {
                     "type": "integer"
@@ -892,33 +924,6 @@
                     "type": "string"
                 }
             }
-        },
-        "services.RoundStatus": {
-            "type": "string",
-            "enum": [
-                "PENDING",
-                "IMPORTING",
-                "DISTRIBUTING",
-                "EVALUATING",
-                "REJECTED",
-                "CANCELLED",
-                "PAUSED",
-                "SCHEDULED",
-                "ACTIVE",
-                "COMPLETED"
-            ],
-            "x-enum-varnames": [
-                "RoundStatusPending",
-                "RoundStatusImporting",
-                "RoundStatusDistributing",
-                "RoundStatusEvaluating",
-                "RoundStatusRejected",
-                "RoundStatusCancelled",
-                "RoundStatusPaused",
-                "RoundStatusScheduled",
-                "RoundStatusActive",
-                "RoundStatusCompleted"
-            ]
         },
         "services.TaskResponse": {
             "type": "object",
